Fix compiler warnings about using deprecated boxing constructors